# athena

./: .env  .gitignore  Cargo.toml  README.md  data.json
.github/workflows/: main.yml
.xbp/: redeploy.sh  xbp.json
src/: main.rs  proxy_request.rs  router.rs
src/api/: mod.rs
src/data/: athena_router.rs  mod.rs
src/drivers/: mod.rs
src/drivers/scylla/: mod.rs
