[package]
name = "athena_rs"
version = "0.1.0"
edition = "2021"
authors = ["floris @ xylex.ai"]

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.111"
anyhow = "1.0.86"
moka = { version = "0.12.7", features = ["future"] }
serde  = { version = "1.0.196", features = ["derive"] }
actix-cors = "0.7.0"
redis = "0.28.2"
simd-json = "0.14.3"
tokio-postgres = { version = "0.7.13", features = ["array-impls", "with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
futures = "0.3.31"
actix-files = "0.6.6"
reqwest = { version = "0.12.4", features = ["json", "blocking", "rustls-tls"] }